<resources>
    <string name="app_name">Contenant</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="help_text">To add a home, click the house button in the bottom right corner, and then click the button labelled \"New House.\" </string>
    <string name="help_text2">To view a home, click the house button in the bottom right corner, and then click the button labelled \"View Houses.\"</string>
    <string name="ok">ok</string>

    <string name="view_house">View Houses</string>
    <string name="new_house">New House</string>
    <string name="view_room">View Rooms</string>
    <string name="new_room">New Room</string>

    <string name="add_home">Add A Home!</string>
    <string name="add_pic">Add Picture</string>

    <string name="name">Name: </string>
    <string name="address">Address: </string>
    <string name="price">Price: </string>
    <string name="notes">Notes: </string>

    <string name="add_room">Add A Room!</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="room_type">Room Type: </string>

    <string-array name="room_array">

        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>Kitchen</item>
        <item>Living Room</item>
        <item>Dining Room</item>
        <item>Family Room</item>
        <item>Den</item>
        <item>Office</item>
        <item>Laundry Room</item>
        <item>Garage</item>
        <item>Other</item>

    </string-array>

    <string name="add_photo">Add a Photo</string>
    <string name="take_photo">Take a Photo</string>
    <string name="gal_photo">Choose from Gallery</string>
    <string name="cancel">Cancel</string>

</resources>
