<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/room_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/add_room"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    />

                <Button
                    android:id="@id/camera_button"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:textColor="@android:color/white"
                    android:layout_below="@+id/room_title"
                    android:text="@string/add_pic"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/room_image"
                    android:paddingTop="20dp"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:src="@drawable/home4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <me.grantland.widget.AutofitTextView
                        android:paddingLeft="20dp"
                        android:paddingTop="30dp"
                        android:id="@+id/room_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/room_type"
                        android:textSize="24sp"
                        />

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/room_type"
                        android:background="@android:drawable/btn_dropdown"
                        android:layout_toRightOf="@id/room_type"
                        android:spinnerMode="dropdown"
                        android:entries="@array/room_array"/>

                <me.grantland.widget.AutofitTextView
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:id="@+id/room_notes"
                    android:layout_below="@id/room_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/notes"
                    android:textSize="24sp"
                    />

                <EditText
                    android:layout_marginRight="20dp"
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_room_notes"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:layout_below="@id/spinner1"
                    android:layout_toRightOf="@id/room_notes"
                    android:theme="@style/MyEditText"/>

                <TextView
                    android:id="@+id/placeholder2"
                    android:layout_width="550dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>