<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/home_image"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:src="@drawable/home5"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toRightOf="@+id/home_image"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="5dp">

                <!--<me.grantland.widget.AutofitTextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:singleLine="true"-->
                    <!--android:id="@+id/home_title"-->
                    <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                    <!--android:text="@string/add_home"-->
                    <!--android:textSize="30sp"-->
                    <!--/>-->

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/home1"
                    android:background="#aaa"
                    android:id="@+id/imageView" />

            </LinearLayout>

            <me.grantland.widget.AutofitTextView
                android:paddingLeft="20dp"
                android:paddingTop="50dp"
                android:layout_below="@+id/home_image"
                android:id="@+id/home_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/address"
                android:textSize="24sp"
                />

            <TextView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:layout_below="@+id/home_image"
                android:layout_toRightOf="@id/home_address"
                android:layout_alignBaseline="@id/home_address"
                android:text="23 spruce"
                android:textSize="20sp" />

            <me.grantland.widget.AutofitTextView
                android:paddingLeft="20dp"
                android:paddingTop="30dp"
                android:layout_below="@+id/home_address"
                android:id="@+id/home_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/price"
                android:textSize="24sp"
                />

            <TextView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:layout_below="@id/home_address"
                android:layout_toRightOf="@id/home_price"
                android:layout_alignBaseline="@id/home_price"
                android:inputType="number"
                android:text="250000"
                android:textSize="20sp"/>

            <me.grantland.widget.AutofitTextView
                android:paddingLeft="20dp"
                android:paddingTop="30dp"
                android:layout_below="@+id/home_price"
                android:id="@+id/home_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/notes"
                android:textSize="24sp"
                />

            <TextView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="10dp"
                android:paddingTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notes"
                android:layout_below="@id/home_price"
                android:layout_toRightOf="@id/home_notes"
                android:layout_alignBaseline="@id/home_notes"
                android:text="great"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/placeholder"
                android:layout_width="550dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/house_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:menu_icon="@drawable/ic_home_white_24dp">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_home_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/view_room"
                fab:fab_icon="@drawable/abc_ic_search_api_mtrl_alpha"/>

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_home_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/new_room"
                fab:fab_icon="@drawable/fab_add"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </LinearLayout>
</RelativeLayout>