<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:paddingTop="20dp"
    android:paddingBottom="20dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:layout_gravity="center_horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <me.grantland.widget.AutofitTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/home_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/add_home"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                />

            <RelativeLayout android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_gravity="center_horizontal">


                <ImageView
                    android:id="@+id/home_image"
                    android:paddingTop="20dp"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:src="@drawable/sample_house"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"/>


                <ImageView
                    android:id="@+id/camera_button"
                    android:clickable="true"
                    android:layout_width="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/camera"
                    android:background="#80FFFFFF"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <me.grantland.widget.AutofitTextView
                    android:paddingLeft="20dp"
                    android:paddingTop="50dp"
                    android:id="@+id/home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/name"
                    android:textSize="24sp"
                    />

                <EditText
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_name"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPostalAddress"
                    android:layout_toRightOf="@id/home_name"
                    android:theme="@style/MyEditText"/>

                <me.grantland.widget.AutofitTextView
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:id="@+id/home_address"
                    android:layout_below="@id/home_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/address"
                    android:textSize="24sp"
                    />

                <EditText
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_address"
                    android:layout_below="@id/edit_name"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="textPostalAddress"
                    android:layout_toRightOf="@id/home_address"
                    android:theme="@style/MyEditText"/>

                <me.grantland.widget.AutofitTextView
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:layout_below="@+id/home_address"
                    android:id="@+id/home_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/price"
                    android:textSize="24sp"
                    />

                <EditText
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_price"
                    android:layout_below="@id/home_address"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:layout_toRightOf="@id/home_price"
                    android:inputType="number"
                    android:theme="@style/MyEditText"/>

                <me.grantland.widget.AutofitTextView
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:layout_below="@+id/home_price"
                    android:id="@+id/home_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/notes"
                    android:textSize="24sp"
                    />

                <EditText
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:paddingTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_home_notes"
                    android:clickable="true"
                    android:focusableInTouchMode="true"
                    android:layout_below="@id/home_price"
                    android:layout_toRightOf="@id/home_notes"
                    android:theme="@style/MyEditText"/>

                <TextView
                    android:id="@+id/placeholder"
                    android:layout_width="550dp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/house_menu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/fab_margin"
            fab:fab_labelStyle="@style/menu_labels_style"
            fab:menu_icon="@drawable/ic_action_menu">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_home_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_title="@string/new_room"
                fab:fab_icon="@drawable/fab_add"/>

        </com.getbase.floatingactionbutton.FloatingActionsMenu>

    </LinearLayout>
</RelativeLayout>